DRY - page header module

--- a/src/pages/2024/cfp.mdx
+++ b/src/pages/2024/cfp.mdx
@@ -1,13 +1,12 @@
 import { CTAButton } from "@/components/button/CTAButton";
 import { SiteLayout } from "@/components/layout/SiteLayout";
+import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
 <SiteLayout title="Poster Presenter Information">
 
-<div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Call for Posters</p>
-</div>
+<PageHeader accent="mulberry">Call for Posters</PageHeader>
 
 <Image
   src="/images/2023 cfp3.jpg"
