--- a/src/pages/archive/2023/awards-advisor.mdx
+++ b/src/pages/archive/2023/awards-advisor.mdx
@@ -1,15 +1,11 @@
 import { SiteLayout } from "@/components/layout/SiteLayout";
+import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
 <SiteLayout title="Awards - Advisor">
-  <div className="border-b-4 border-apricot border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-medium">
-      Awards - Advisor
-    </p>
-  </div>
-
-  <div>
+<PageHeader accent="apricot">Awards - Advisor</PageHeader>
+<div>
 
 ## oSTEM Advisor of the Year
 
