--- a/src/pages/archive/2023/awards-strategic-alliance.mdx
+++ b/src/pages/archive/2023/awards-strategic-alliance.mdx
@@ -1,13 +1,10 @@
 import { SiteLayout } from "@/components/layout/SiteLayout";
+import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
 <SiteLayout title="Awards - Strategic Alliance">
-  <div className="border-b-4 border-apricot border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-medium">
-      Awards - Strategic Alliance
-    </p>
-  </div>
+<PageHeader accent="apricot">Awards - Strategic Alliance</PageHeader>
 
 <div>
 
