--- a/src/pages/archive/2023/awards.mdx
+++ b/src/pages/archive/2023/awards.mdx
@@ -1,12 +1,11 @@
 import { SiteLayout } from "@/components/layout/SiteLayout";
+import { PageHeader } from "@/components/header/PageHeader";
 import { AwardSquare } from "@/components/awards/AwardSquare";
 import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/image";
 
 <SiteLayout title="Awards">
-<div className="border-b-4 border-apricot border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Awards</p>
-</div>
+<PageHeader accent="apricot">Awards</PageHeader>
 
 <Image
   src="/images/oSTEM-awards.jpg"
