--- a/src/pages/archive/2023/expo.mdx
+++ b/src/pages/archive/2023/expo.mdx
@@ -1,13 +1,12 @@
 import { SiteLayout } from "@/components/layout/SiteLayout";
 import { CTAButton } from "@/components/button/CTAButton";
+import { PageHeader } from "@/components/header/PageHeader";
 import { AwardSquare } from "@/components/awards/AwardSquare";
 import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/image";
 
 <SiteLayout title="Expo">
-<div className="border-b-4 border-linen border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Career & Grad School Expo</p>
-</div>
+<PageHeader accent="linen">Career & Grad School Expo</PageHeader>
 
 
 
