--- a/src/pages/archive/2023/recap.mdx
+++ b/src/pages/archive/2023/recap.mdx
@@ -1,11 +1,10 @@
 import { SiteLayout } from "@/components/layout/SiteLayout";
 import { CTAButton } from "@/components/button/CTAButton.tsx";
+import { PageHeader } from "@/components/header/PageHeader";
 import { PhotoGallery } from "@/components/layout/PhotoGallery";
 
 <SiteLayout title="2022 Recap">
-<div className="border-b-4 border-raspberry border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">2022 Recap</p>
-</div>
+<PageHeader accent="raspberry">2022 Recap</PageHeader>
 
 <div>
   <p>See our 2022 oSTEM Conference recap book</p>
