--- a/src/pages/2024/partnership.mdx
+++ b/src/pages/2024/partnership.mdx
@@ -1,13 +1,12 @@
 import { SiteLayout } from "@/components/layout/SiteLayout";
 import { CTAButton } from "@/components/button/CTAButton";
+import { PageHeader } from "@/components/header/PageHeader";
 import { AwardSquare } from "@/components/awards/AwardSquare";
 import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/future/image";
 
 <SiteLayout title="Partnerships">
-<div className="border-b-4 border-linen border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Exhibition and Sponsorship Opportunities</p>
-</div>
+<PageHeader accent="linen">Exhibition and Sponsorship Opportunities</PageHeader>
 
 <Image
   src="/images/2024/partnership-banner-2024.webp"
