--- a/src/pages/2024/previous-exhibitors.mdx
+++ b/src/pages/2024/previous-exhibitors.mdx
@@ -1,13 +1,12 @@
 import { SiteLayout } from "../../components/layout/SiteLayout";
 import { CTAButton } from "../../components/button/CTAButton";
+import { PageHeader } from "@/components/header/PageHeader";
 import { AwardSquare } from "../../components/awards/AwardSquare";
 import { AwardCard } from "../../components/awards/AwardCard";
 import Image from "next/future/image";
 
 <SiteLayout title="Partnerships">
-<div className="border-b-4 border-linen border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Previous Exhibitors</p>
-</div>
+<PageHeader accent="linen">Previous Exhibitors</PageHeader>
 
 <Image
   src="/images/partnership-banner-image.jpg"
