--- a/src/pages/2024/registration.mdx
+++ b/src/pages/2024/registration.mdx
@@ -1,13 +1,12 @@
 import { SiteLayout } from "@/components/layout/SiteLayout";
 import { CTAButton } from "@/components/button/CTAButton";
+import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
 <SiteLayout title="Registration">
 
-<div className="border-b-4 border-ostem-blue border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Registration</p>
-</div>
+<PageHeader accent="ostem-blue">Registration</PageHeader>
 
 <Image
   src="/images/2023registration.png"
