--- a/src/pages/2024/rfp.mdx
+++ b/src/pages/2024/rfp.mdx
@@ -1,13 +1,12 @@
 import { CTAButton } from "@/components/button/CTAButton";
 import { SiteLayout } from "@/components/layout/SiteLayout";
+import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/future/image";
 
 <SiteLayout title="Request for Programs">
 
-<div className="border-b-4 border-chill-green border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Requests for Programs</p>
-</div>
+<PageHeader accent="chill-green">Requests for Programs</PageHeader>
 
 <picture>
     <source srcSet="/images/2024/2024_rfp_vertical.png" media='(orientation: portrait)' alt="Graphical timeline explaining the 2024 RFP process. There are four headers titled Review the RFP, Three Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image."/>
