--- a/src/pages/archive/2023/attendee-guide.mdx
+++ b/src/pages/archive/2023/attendee-guide.mdx
@@ -1,13 +1,12 @@
-import { CTAButton } from "@/components/button/CTAButton";
 import { SiteLayout } from "@/components/layout/SiteLayout";
+import { CTAButton } from "@/components/button/CTAButton";
+import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
 <SiteLayout title="Attendee Resources">
 
-<div className="border-b-4 border-purple border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Attendee Resources</p>
-</div>
+<PageHeader accent="purple">Attendee Resources</PageHeader>
 <br />
 
 <div className="text-bright-peach font-bold">
