--- a/src/pages/archive/2023/awards-rookie-chapter.mdx
+++ b/src/pages/archive/2023/awards-rookie-chapter.mdx
@@ -1,15 +1,12 @@
 import { SiteLayout } from "@/components/layout/SiteLayout";
+import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
 <SiteLayout title="Awards - Rookie Chapter">
-  <div className="border-b-4 border-apricot border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-medium">
-      Awards - Rookie Chapter
-    </p>
-  </div>
+<PageHeader accent="apricot">Awards - Rookie Chapter</PageHeader>
 
-  <div>
+<div>
 
 ## Rookie Chapter of the Year
 
