--- a/src/pages/archive/2023/rfp.mdx
+++ b/src/pages/archive/2023/rfp.mdx
@@ -1,13 +1,12 @@
-import { CTAButton } from "@/components/button/CTAButton";
 import { SiteLayout } from "@/components/layout/SiteLayout";
+import { CTAButton } from "@/components/button/CTAButton";
+import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
 <SiteLayout title="Request for Proposals">
 
-<div className="border-b-4 border-chill-green border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Requests for Proposals</p>
-</div>
+<PageHeader accent="chill-green">Requests for Proposals</PageHeader>
 
 <Image
   src="/images/2022-11-12 oSTEM_2489.jpg"
