--- a/src/pages/archive/2023/site-tour.mdx
+++ b/src/pages/archive/2023/site-tour.mdx
@@ -1,14 +1,12 @@
-import { CTAButton } from "@/components/button/CTAButton";
 import { SiteLayout } from "@/components/layout/SiteLayout";
+import { CTAButton } from "@/components/button/CTAButton";
+import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
 <SiteLayout title="Sponsor Site Tours">
 
-<div className="border-b-4 border-sky border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Sponsor Site Tours</p>
-</div>
-<br />
+<PageHeader accent="sky">Sponsor Site Tours</PageHeader>
 
 Are you a STEM student or young professional eager to kickstart your career and
 gain invaluable insights into the world of both industry and academia? Look no
