Further DRY consolidation

--- a/src/pages/2024/attendee-resources.mdx
+++ b/src/pages/2024/attendee-resources.mdx
@@ -4,11 +4,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Attendee Resources">
-
-<PageHeader accent="purple">Attendee Resources</PageHeader>
-<br />
-
+<SiteLayout title="Attendee Resources" accent="purple">
 <div className="text-bright-peach font-bold">
 
 ## Transportation: Coming Soon
