--- a/src/pages/2024/cfp.mdx
+++ b/src/pages/2024/cfp.mdx
@@ -4,9 +4,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Poster Presenter Information">
-
-<PageHeader accent="mulberry">Call for Posters</PageHeader>
+<SiteLayout title="Call for Posters" accent="mulberry">
 
 <Image
   src="/images/2023 cfp3.jpg"
