--- a/src/pages/2024/partnership.mdx
+++ b/src/pages/2024/partnership.mdx
@@ -5,8 +5,7 @@ import { AwardSquare } from "@/components/awards/AwardSquare";
 import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/future/image";
 
-<SiteLayout title="Partnerships">
-<PageHeader accent="linen">Exhibition and Sponsorship Opportunities</PageHeader>
+<SiteLayout title="Exhibition and Sponsorship Opportunities" accent="linen">
 
 <Image
   src="/images/2024/partnership-banner-2024.webp"
