--- a/src/pages/2024/previous-exhibitors.mdx
+++ b/src/pages/2024/previous-exhibitors.mdx
@@ -5,8 +5,7 @@ import { AwardSquare } from "../../components/awards/AwardSquare";
 import { AwardCard } from "../../components/awards/AwardCard";
 import Image from "next/future/image";
 
-<SiteLayout title="Partnerships">
-<PageHeader accent="linen">Previous Exhibitors</PageHeader>
+<SiteLayout title="Previous Exhibitors" accent="linen">
 
 <Image
   src="/images/partnership-banner-image.jpg"
