--- a/src/pages/2024/rfp.mdx
+++ b/src/pages/2024/rfp.mdx
@@ -4,9 +4,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/future/image";
 
-<SiteLayout title="Request for Programs">
-
-<PageHeader accent="chill-green">Requests for Programs</PageHeader>
+<SiteLayout title="Requests for Programs" accent="chill-green">
 
 <picture>
     <source srcSet="/images/2024/2024_rfp_vertical.png" media='(orientation: portrait)' alt="Graphical timeline explaining the 2024 RFP process. There are four headers titled Review the RFP, Three Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image."/>
