--- a/src/pages/archive/2023/attendee-guide.mdx
+++ b/src/pages/archive/2023/attendee-guide.mdx
@@ -4,9 +4,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Attendee Resources">
-
-<PageHeader accent="purple">Attendee Resources</PageHeader>
+<SiteLayout title="Attendee Resources" accent="purple">
 <br />
 
 <div className="text-bright-peach font-bold">
