--- a/src/pages/archive/2023/awards-global-stem-service.mdx
+++ b/src/pages/archive/2023/awards-global-stem-service.mdx
@@ -3,8 +3,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
-<SiteLayout title="Awards - Global STEM Service Award">
-<PageHeader accent="apricot">Awards - Global STEM Service Award</PageHeader>
+<SiteLayout title="Awards - Global STEM Service Award" accent="apricot">
 
 <div>
 
