--- a/src/pages/archive/2023/awards-partner-excellence.mdx
+++ b/src/pages/archive/2023/awards-partner-excellence.mdx
@@ -3,8 +3,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
-<SiteLayout title="Awards - Partner Excellence">
-<PageHeader accent="apricot">Awards - Partner Excellence</PageHeader>
+<SiteLayout title="Awards - Partner Excellence" accent="apricot">
 
 <div>
 
