--- a/src/pages/archive/2023/awards-volunteer.mdx
+++ b/src/pages/archive/2023/awards-volunteer.mdx
@@ -3,8 +3,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
-<SiteLayout title="Awards - Volunteer">
-<PageHeader accent="apricot">Awards - Volunteer</PageHeader>
+<SiteLayout title="Awards - Volunteer" accent="apricot">
 
 <div>
 
