--- a/src/pages/archive/2023/awards.mdx
+++ b/src/pages/archive/2023/awards.mdx
@@ -4,8 +4,7 @@ import { AwardSquare } from "@/components/awards/AwardSquare";
 import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/image";
 
-<SiteLayout title="Awards">
-<PageHeader accent="apricot">Awards</PageHeader>
+<SiteLayout title="Awards" accent="apricot">
 
 <Image
   src="/images/oSTEM-awards.jpg"
