--- a/src/pages/archive/2023/expo.mdx
+++ b/src/pages/archive/2023/expo.mdx
@@ -5,8 +5,7 @@ import { AwardSquare } from "@/components/awards/AwardSquare";
 import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/image";
 
-<SiteLayout title="Expo">
-<PageHeader accent="linen">Career & Grad School Expo</PageHeader>
+<SiteLayout title="Career & Grad School Expo" accent="linen">
 
 
 
