--- a/src/pages/archive/2023/partnership.mdx
+++ b/src/pages/archive/2023/partnership.mdx
@@ -5,8 +5,7 @@ import { AwardSquare } from "@/components/awards/AwardSquare";
 import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/image";
 
-<SiteLayout title="Partnerships">
-<PageHeader accent="linen">Partnership Opportunities</PageHeader>
+<SiteLayout title="Partnership Opportunities" accent="linen">
 
 <Image
   src="/images/partnership-banner-image.jpg"
