--- a/src/pages/archive/2023/recap.mdx
+++ b/src/pages/archive/2023/recap.mdx
@@ -3,8 +3,7 @@ import { CTAButton } from "@/components/button/CTAButton.tsx";
 import { PageHeader } from "@/components/header/PageHeader";
 import { PhotoGallery } from "@/components/layout/PhotoGallery";
 
-<SiteLayout title="2022 Recap">
-<PageHeader accent="raspberry">2022 Recap</PageHeader>
+<SiteLayout title="2022 Recap" accent="raspberry">
 
 <div>
   <p>See our 2022 oSTEM Conference recap book</p>
