--- a/src/pages/archive/2023/rfp.mdx
+++ b/src/pages/archive/2023/rfp.mdx
@@ -4,9 +4,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Request for Proposals">
-
-<PageHeader accent="chill-green">Requests for Proposals</PageHeader>
+<SiteLayout title="Requests for Proposals" accent="chill-green">
 
 <Image
   src="/images/2022-11-12 oSTEM_2489.jpg"
