--- a/src/pages/archive/2023/schedule.mdx
+++ b/src/pages/archive/2023/schedule.mdx
@@ -4,9 +4,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Schedule">
-
-<PageHeader accent="amber">Schedule</PageHeader>
+<SiteLayout title="Schedule" accent="amber">
 <br />
 
 <div className="text-bright-peach font-bold">
