--- a/src/pages/archive/2023/site-tour.mdx
+++ b/src/pages/archive/2023/site-tour.mdx
@@ -4,9 +4,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Sponsor Site Tours">
-
-<PageHeader accent="sky">Sponsor Site Tours</PageHeader>
+<SiteLayout title="Sponsor Site Tours" accent="sky">
 
 Are you a STEM student or young professional eager to kickstart your career and
 gain invaluable insights into the world of both industry and academia? Look no
