--- a/src/pages/2024/registration.mdx
+++ b/src/pages/2024/registration.mdx
@@ -4,9 +4,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Registration">
-
-<PageHeader accent="ostem-blue">Registration</PageHeader>
+<SiteLayout title="Registration" accent="ostem-blue">
 
 <Image
   src="/images/2023registration.png"
