--- a/src/pages/archive/2023/awards-advisor.mdx
+++ b/src/pages/archive/2023/awards-advisor.mdx
@@ -3,8 +3,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
-<SiteLayout title="Awards - Advisor">
-<PageHeader accent="apricot">Awards - Advisor</PageHeader>
+<SiteLayout title="Awards - Advisor" accent="apricot">
 <div>
 
 ## oSTEM Advisor of the Year
