--- a/src/pages/archive/2023/awards-chapter-leader.mdx
+++ b/src/pages/archive/2023/awards-chapter-leader.mdx
@@ -3,8 +3,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
-<SiteLayout title="Awards - Chapter Leader">
-  <PageHeader accent="apricot">Awards - Chapter Leader</PageHeader>
+<SiteLayout title="Awards - Chapter Leader" accent="apricot">
 
   <div>
 
