--- a/src/pages/archive/2023/awards-lgbtq-employee-network.mdx
+++ b/src/pages/archive/2023/awards-lgbtq-employee-network.mdx
@@ -3,8 +3,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
-<SiteLayout title="Awards - LGBTQ+ Employee Network">
-<PageHeader accent="apricot">Awards - LGBTQ+ Employee Network</PageHeader>
+<SiteLayout title="Awards - LGBTQ+ Employee Network" accent="apricot">
 
 <div>
 
