--- a/src/pages/archive/2023/awards-overall-chapter.mdx
+++ b/src/pages/archive/2023/awards-overall-chapter.mdx
@@ -3,8 +3,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
-<SiteLayout title="Awards - Overall Chapter">
-<PageHeader accent="apricot">Awards - Overall Chapter</PageHeader>
+<SiteLayout title="Awards - Overall Chapter" accent="apricot">
 
 <div>
 
