--- a/src/pages/archive/2023/awards-strategic-alliance.mdx
+++ b/src/pages/archive/2023/awards-strategic-alliance.mdx
@@ -3,8 +3,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { AwardCardButton } from "@/components/awards/AwardCard";
 import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
-<SiteLayout title="Awards - Strategic Alliance">
-<PageHeader accent="apricot">Awards - Strategic Alliance</PageHeader>
+<SiteLayout title="Awards - Strategic Alliance" accent="apricot">
 
 <div>
 
