--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -4,7 +4,7 @@ import { PageHeader } from "@/components/header/PageHeader";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Registration" accent="ostem-blue">
+<SiteLayout title="Registration" accent="nav-green">
 
 <Image
   src="/images/2023registration.png"
