Bugfix: Import paths

--- a/src/pages/2024/partner/previous-exhibitors.mdx
+++ b/src/pages/2024/partner/previous-exhibitors.mdx
@@ -1,8 +1,8 @@
-import { SiteLayout } from "../../components/layout/SiteLayout";
-import { CTAButton } from "../../components/button/CTAButton";
+import { SiteLayout } from "@/components/layout/SiteLayout";
+import { CTAButton } from "@/components/button/CTAButton";
 import { PageHeader } from "@/components/header/PageHeader";
-import { AwardSquare } from "../../components/awards/AwardSquare";
-import { AwardCard } from "../../components/awards/AwardCard";
+import { AwardSquare } from "@/components/awards/AwardSquare";
+import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/future/image";
 
 <SiteLayout title="Previous Exhibitors" accent="linen">
