--- a/src/pages/2024/whats-new.mdx
+++ b/src/pages/2024/whats-new.mdx
@@ -2,9 +2,55 @@ import { SiteLayout } from "@/components/layout/SiteLayout";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="What's New" accent="nav-green">
+<SiteLayout title="What's New" accent="nav-pink">
 
-TBD :D
+<div className="text-nav-pink font-bold">
+
+## Conference Changes
+
+</div>
+
+As we continue to grow, we continuously implement changes to accomodate the ever increasing conference attendance size, changes based on the needs of our community, and changes that originate directly from **your** feedback.
+
+For 2024, our conference will be at a convention center for the very first time, specifically [the Oregon Convention Center](https://www.oregoncc.org). This is very exciting for us! It also means that conference will look quite different. 
+
+### Group Block Hotels
+Instead of one hotel, we will have three hotels with group block rates. Hotels with our special oSTEM block rate will be first come first served, and we will be continuously updating this website to show how much capacity each hotel has remaining.
+
+
+### Programming Changes
+Our [Request for Programs](/2024/present/request-for-programs) and [Request for Panel Topics](/2024/present/request-for-panel-topics) are now two separate pages and application forms. Furthermore, our request for programs will now be split into three distinct tracks: Collegiate, Industry, and Technical Spotlight. Please visit their pages for more information.
+
+We are keeping our 50% registration discount benefit for program presenters and panel moderators this year.
+
+
+<div className="text-nav-pink font-bold">
+<br/>
+
+---
+## Website Changes
+
+</div>
+
+Back in 2021 we only had five pages under our website. With how much we've grown, our sidebar has become cluttered and difficult to navigate. A redesign has been overdue for some time now, so we hope you find the new website easier to navigate and more aesthetically pleasing.
+
+### New Navbar
+
+The sidebar is gone and has been replaced with a fully responsive navbar. This navbar looks differently on mobile, tablet, and desktop to ensure that information is conveyed in a manner that is optimal for the device you're visiting our website on. Pages are now grouped by what you're intending to do at the conference (i.e., someone only attending the conference won't need information specific to presenters), and subtle transitions and animations make the new navbar feel fluid and smooth.
+
+### Dark Theme
+
+A new dark theme complements devices on dark mode and looks great at night. The website will follow whatever color scheme your device is using by default, but can be easily overriden under "More" (on desktop) or in the sidebar (on tablet/mobile).
+
+### Revamped Pages
+
+Many pages have been either significantly improved or completely rebuilt from scratch for the 2024 (14th) annual conference. All images should now have alternative text for improved accessibility, and we've increased our use of (screen reader friendly) icons and (accessible) components to simplify navigation.
+
+### Coming Soon: Previous Conference Archive
+
+We'd like to offer you the ability to view information from previous conference years on our website, which can be particularly helpful for first-time attendees who don't know what conference is like. Currently, a select few archived pages are available (i.e., under the Registration page you can view last year's registration), but we hope to make a full archive available dating back to 2021 in the coming months.
+
+<br/>
 
 ---
 
