More what's new progress

--- a/src/pages/2024/whats-new.mdx
+++ b/src/pages/2024/whats-new.mdx
@@ -14,6 +14,9 @@ As we continue to grow, we continuously implement changes to accomodate the ever
 
 For 2024, our conference will be at a convention center for the very first time, specifically [the Oregon Convention Center](https://www.oregoncc.org). This is very exciting for us! It also means that conference will look quite different. 
 
+### New Conference Dates
+Conference is happening significantly earlier this year! Our 14th Annual Conference will be taking place 
+
 ### Group Block Hotels
 Instead of one hotel, we will have three hotels with group block rates. Hotels with our special oSTEM block rate will be first come first served, and we will be continuously updating this website to show how much capacity each hotel has remaining.
 
