CTAButton css changes, appropriate archive nav header

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -24,11 +24,14 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     <div className="bg-primary rounded">
       <p className="p-4">
         <b>Request for Proposals:</b> May 31, 2024 <br />
+        <b>Request for Panel Topics:</b> May 31, 2024 <br />
         <b>Early Bird Registration:</b> TBD <br />
       </p>
-      <p className='p-4'>Request for proposals now open!</p>
-      <div className="text-xl flex justify-center p-2">
-          <CTAButton onClick="/2024/rfp" backgroundColor="ostem-blue" target='_self'> Submit your Proposal</CTAButton>
+      <p className='p-4'>Requests for programs and panel topics are now open.</p>
+      <div className="text-xl text-center p-2">
+          <CTAButton onClick="/2024/present/request-for-programs" backgroundColor="ostem-blue" target='_self'> Submit a Proposal</CTAButton>
+          <br/><br/>
+          <CTAButton onClick="/2024/present/request-for-panel-topics" backgroundColor="ostem-blue" target='_self'> Submit a Panel Topic</CTAButton>
       </div>
     </div>
   </div>
