Update pages that need a 2024 version

--- a/src/pages/2024/attend/attendee-resources.mdx
+++ b/src/pages/2024/attend/attendee-resources.mdx
@@ -10,7 +10,7 @@ import Image from "next/image";
 
 </div>
 
-We will be publishing transportation guides specific to Portland, OR here in the coming months.
+We will be publishing transportation guides specific to Portland, OR here in the coming weeks.
 
 The conference will be taking place at the <a href='https://www.oregoncc.org/en' target='_blank'>Oregon Convention Center</a>.
 
