--- a/src/pages/2024/present/call-for-posters.mdx
+++ b/src/pages/2024/present/call-for-posters.mdx
@@ -3,7 +3,7 @@ import { SiteLayout } from "@/components/layout/SiteLayout";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Call for Posters" accent="mulberry">
+<SiteLayout title="Call for Posters" accent="nav-blue">
 
 <Image
   src="/images/2023 cfp3.jpg"
@@ -17,39 +17,18 @@ import Image from "next/image";
 
 <div className="my-2 flex flex-col items-center sm:flex-row justify-center">
   <div className="my-1 sm:mx-2">
-    <CTAButton onClick="https://ostemfilestorage.blob.core.windows.net/publicfiles/oSTEM2023_Abstract_Book.pdf">
+    <CTAButton onClick="https://cdn.ostem.org/publicfiles/oSTEM2023_Abstract_Book.pdf">
       2023 Poster Abstract Book
     </CTAButton>
   </div>
 </div>
 
-Out in Science, Technology, Engineering, and Mathematics (oSTEM) is no longer
-accepting poster proposals for the in-person 13th Annual oSTEM Conference 2023.
+Out in Science, Technology, Engineering, and Mathematics (oSTEM) has not yet started accepting posters for the in-person 14th Annual oSTEM Conference 2024.
 
 The oSTEM Annual Conference Poster Session is intended for undergraduate
 students, graduate students, and postdocs to showcase their research to other
 conference attendees. Anyone performing academic or industry research is invited
 to submit a poster for consideration.
-
-<div className="bg-tint-spruce-light text-2xl mt-4 p-8 rounded">
-  <p className="flex items-center">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      className="h-6 w-6 mr-3"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke="currentColor"
-    >
-      <path
-        strokeLinecap="round"
-        strokeLinejoin="round"
-        strokeWidth={2}
-        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-      />
-    </svg>
-    We are no longer accepting posters. Thank you to everyone who has submitted!
-  </p>
-</div>{" "}
 
 <div className="text-bright-peach font-bold">
 
@@ -57,8 +36,7 @@ to submit a poster for consideration.
 
 </div>
 
-- **Friday, June 30**: Call for posters released
-- **Friday, September 30**: Final Deadline
+- **TBD**: Call for posters released
 
 <div className="text-bright-peach font-bold">
 
@@ -84,29 +62,6 @@ postdoc posters!
 
   The maximum poster dimensions are 48" x 36".
 
-<img src="/images/poster-dimensions.jpg" alt="" />
-
-- **How long will poster submissions be open for the conference?**
-
-  We will accept posters until September 30.
-
-- **I submitted my poster but never received a confirmation email. Did you
-  receive my poster submission?**
-
-  The Jotform is currently set up to send confirmation emails. If you do not receive one, please reach out to conference-programming@ostem.org.
-
-- **How will the posters be displayed?**
-
-  We display the posters on an 8' x 4' free-standing corkboard with push pins.
-
-- **I noticed the poster session is during the Career Fair and Graduate School
-  Expo. Can I still attend the expo and present a poster?**
-
-  Yes! Please let the programming committee know that you plan on attending the
-  career fair and promptly arrive at the start of the session. There will be
-  about 20 minutes to attend after the session is over if you need additional
-  time.
-
 - **Do I need to bring my poster? Can you print it for me?**
 
   Unfortunately, oSTEM cannot print your poster. We advise that you travel with
@@ -117,15 +72,11 @@ postdoc posters!
   Posters will be accepted on a rolling basis and you will receive an email
   before October to tell you the outcome of your poster submission.
 
-- **When can I set my poster up?**
-
-  Poster setup will be on Saturday morning and be available throughout the day
-  on Saturday. Feel free to take a free moment to wander through the posters
-  during the day.
-
 - **Do students participating in the poster session receive a conference registration discount?**
 
-  Yes, students chosen to present their research during the poster sessions will receive a 20% discount code in their confirmation email. Our team of reviewers are volunteers and may need up to 14 business days to review submissions and confirm.
+  Yes, students chosen to present their research during the poster sessions will receive a discount code in their confirmation email. Our team of reviewers are volunteers and as such, it may take a while before you hear back.
+
+- **More FAQs will be put here once Call for Posters is open for 2024.**
 
 <div className="text-bright-peach font-bold">
 
@@ -133,9 +84,9 @@ postdoc posters!
 
 </div>
 
-For more information about the conference visit https://conference.ostem.org/.
+For more information about the conference visit [conference.ostem.org](https://conference.ostem.org).
 
-For more information about oSTEM visit https://ostem.org.
+For more information about oSTEM visit [ostem.org](https://ostem.org).
 
 Please email our Conference Programming Committee at
 conference-programming@ostem.org with any questions.
