--- a/src/pages/archive/2023/schedule.mdx
+++ b/src/pages/archive/2023/schedule.mdx
@@ -12,8 +12,7 @@ import Image from "next/image";
 
 </div>
 
-This schedule will be updated with further information as it is available. All
-times are Pacific Time and are subject to change.
+This schedule is for a previous annual conference and has been archived for your reference. All times are Pacific Time.
 
 <br />
 
