--- a/src/pages/2024/present/request-for-programs.mdx
+++ b/src/pages/2024/present/request-for-programs.mdx
@@ -47,15 +47,17 @@ Based on previous feedback, oSTEM is excited to introduce three tracks for the 2
 
 **Technical Spotlight:** Topics for this track will be extremely focused on the highly technical aspects of the presented topic. Professionals who already belong to this field or want to appreciate the intricacies of the field. These submissions are more focused and it is expected that the audience will have foundational knowledge of the topic being discussed. For the 2024 Conference, our programs will focus on AI and Machine Learning, Research and Study Design in LGBT+ Population, and Sustainable Engineering.
 
+You can learn more about the three tracks below:
+
 <div>
 <Tab.Group>
-<Tab.List className='mt-4 pt-1 sticky top-[87px] sm:top-[64px] flex space-x-1 p-1 bg-primary border-b'>
+<Tab.List className='mt-4 pt-1 sticky top-[87px] sm:top-[64px] flex space-x-1 p-1 bg-primary border-b border-text-color'>
   {/* Learn more about:&nbsp; */}
   {
-    ['Collegiate', 'Industry', 'Technical Spotlight'].map(e => (<Tab className={({selected}) => (`${selected ? `text-nav-blue bg-blue-200/25` : `hover:bg-blue-200/15`} transition rounded px-1 text-lg`)} key={e}>{e}</Tab>))
+    ['Collegiate', 'Industry', 'Technical Spotlight'].map(e => (<Tab className={({selected}) => (`${selected ? `text-nav-blue bg-blue-300/25` : `hover:bg-blue-300/15`} transition rounded px-1 text-lg`)} key={e}>{e}</Tab>))
   }
 </Tab.List>
-<Tab.Panels className='border-b border-l border-r px-4 border-x-gray-500/50'>
+<Tab.Panels className='border-b border-text-color px-4 bg-blue-500/10'>
 <Tab.Panel>
 <div className="text-nav-blue font-bold">
 
