Update poster text

--- a/src/pages/2024/present/call-for-posters.mdx
+++ b/src/pages/2024/present/call-for-posters.mdx
@@ -74,7 +74,7 @@ postdoc posters!
 
 - **Do students participating in the poster session receive a conference registration discount?**
 
-  Yes, students chosen to present their research during the poster sessions will receive a discount code in their confirmation email. Our team of reviewers are volunteers and as such, it may take a while before you hear back.
+  No, participating in the poster session alone will not give you a conference discount. If you're interested in submitting a program proposal or panel topic proposal, you can get a discount there should your proposal be accepted.
 
 - **More FAQs will be put here once Call for Posters is open for 2024.**
 
