RFPT - typo fix

--- a/src/pages/2024/present/request-for-panel-topics.mdx
+++ b/src/pages/2024/present/request-for-panel-topics.mdx
@@ -31,7 +31,7 @@ Read on for more information about panel topics. Below is a list of important da
 
 Panel submissions help to diversify the programming opportunities at the oSTEM conference and are an effective way to understand multiple viewpoints on a single topic. oSTEM is interested in helping to facilitate the creation of panels for the 2024 conference by first selecting panel topics that align with current themes and programming and then taking an additional step to ensure panels are composed of individuals that are best able to speak on the topic. 
 
-Submissions are expected to be from individuals that are willing to **moderate or participate** in a panel with the topic they have provided. A future call for panelists will be provided by oSTEM in order to fill panelist spots on topics available. oSTEM will accept suggestions of individuals that the applicant believes would offer a unique perspective on the topic they have proposed. Panelists suggested does guarantee that they will be selected for the panel discussion.
+Submissions are expected to be from individuals that are willing to **moderate or participate** in a panel with the topic they have provided. A future call for panelists will be provided by oSTEM in order to fill panelist spots on topics available. oSTEM will accept suggestions of individuals that the applicant believes would offer a unique perspective on the topic they have proposed. Suggesting panelists does **not** guarantee that they will be selected for the panel discussion.
 
 Panel discussions will be structured as **1 moderator and 3-4 participants**. The moderator will be responsible for maintaining the pace of conversation so that all pre-determined questions can be answered in the allotted time. Panel members will be expected to plan a succinct response ahead of time to the questions provided by the moderator. 
 
