--- a/src/pages/2024/awards/index.mdx
+++ b/src/pages/2024/awards/index.mdx
@@ -43,7 +43,7 @@ great submission.
 - Chapter of the Year - Group
 - Rookie Chapter of the Year - Group
 - Chapter Leader of the Year - Individual
-- Advisor of the Year - Individual **_New!_**
+- Advisor of the Year - Individual
 
 </AwardSquare>
 <AwardSquare title="Partner Awards" borderColor="border-yellow-500" href="#sponsor-awards">
@@ -103,10 +103,9 @@ info@ostem.org or by contacting the individual team responsible for the award._
   things you do.
 - Be recognized at an award ceremony during the Annual oSTEM Conference.
 - **Chapter, Rookie, and Chapter Leader Awards** will receive 4 free student
-  registrations and reimbursement of 3 room nights at the conference hotel if
-  booked under oSTEM block by Monday, October 16, 2023. ($1,500 value)
+  registrations.
 - **Advisor Award** receives 1 free advsior registration + 3 free student
-  registrations. ($775 value)
+  registrations.
 
 <div>
   <AwardCard
@@ -114,11 +113,11 @@ info@ostem.org or by contacting the individual team responsible for the award._
     desc="This award recognizes the ongoing accomplishments of established oSTEM Chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. It is the oSTEM chapters that contribute greatly to this work. If your chapter has made a significant effort toward achieving these goals on your campus and/or in your community we ask you to apply and be recognized for your efforts."
     elig={[
       "Must be a verified Standard oSTEM Chapter or Affiliate Chapter of active status",
-      "Must have a representative attending the oSTEM Annual Conference. (Winner will receive 4 free student registrations and reimbursement of 3 room nights at the conference hotel if booked under oSTEM block by Monday, October 16, 2023.)",
+      "Must have a representative attending the oSTEM Annual Conference. (Winner will receive a code for 4 free student registrations.)
     ]}
     borderColor="border-blue-500"
     alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
-    nominateUrl="https://form.jotform.com/231424936571357"
+    nominateUrl=" https://form.jotform.com/240647442687162"
     awardDetailUrl="/2024/awards/awards-overall-chapter"
   />
 
@@ -128,11 +127,11 @@ info@ostem.org or by contacting the individual team responsible for the award._
   elig={[
     "Must be a verified non-affiliate oSTEM Chapter of active status",
     "Must have been founded within two years of the submission of this application",
-    "Must have a representative attending the oSTEM Annual Conference. (Winner will receive 4 free student registrations and reimbursement of 3 room nights at the conference hotel if booked under oSTEM block by Monday, October 16, 2023.)",
+    "Must have a representative attending the oSTEM Annual Conference. (Winner will receive a code for 4 free student registrations.)",
   ]}
   borderColor="border-blue-500"
   alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
-  nominateUrl="https://form.jotform.com/231424895247361"
+  nominateUrl="https://form.jotform.com/240647402875157"
   awardDetailUrl="/2024/awards/awards-rookie-chapter"
 />
 
@@ -145,7 +144,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   ]}
   borderColor="border-blue-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
-  nominateUrl="https://form.jotform.com/231425712400341"
+  nominateUrl=" https://form.jotform.com/240647366549164"
   awardDetailUrl="/2024/awards/awards-chapter-leader"
 />
 
@@ -158,7 +157,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   ]}
   borderColor="border-blue-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
-  nominateUrl="https://form.jotform.com/231425475169359"
+  nominateUrl="https://form.jotform.com/240646696469170"
   awardDetailUrl="/2024/awards/awards-advisor"
 />
 </div>
@@ -284,7 +283,7 @@ hints and tips for what makes a good nomination:
 
 Winners will be announced via our social media and email. We will also be coming
 together to celebrate our winners in person at the award ceremonies during our
-annual conference this year in Anaheim, CA.
+annual conference this year in Portland, OR.
 
 ### Who decides the winners?
 
@@ -294,7 +293,7 @@ information such as chapter name and nominee name will be removed from the
 nomination to reduce bias by the Head Judge. All those judging will be asked to
 declare their biases in advance and will be requested by the Head Judge to not
 be involved in any decisions where they are deemed to have a conflict of
-interest. All judging will take place in September.
+interest.
 
 ### What is oSTEM's data policy with the nominations?
 
