--- a/src/pages/2024/present/request-for-programs.mdx
+++ b/src/pages/2024/present/request-for-programs.mdx
@@ -195,8 +195,8 @@ Your proposal must include the following components:
 ## Benefits for Presenters
 </div>
 
-- 50% registration discount for selected presenters. Each selected panel is
-  limited to 4 presenter discount codes. <br/>
+- 50% registration discount for selected presenters. Each selected presentation is
+  limited to 2 presenter discount codes. <br/>
 - Add "Selected Talk for National Conference" to resume or CV <br/>
 - Gain additional public speaking experience <br/>
 - Increase visibility and networking opportunities with LGBTQ+ professionals and
